2006-11-23  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ufcun.h: Fixing UCC bug that caused first obj.say or obj.hide calls to do
	  fail do perform their intrinsic calls if they were the first intrinsic-
	  related calls in a usecode file.
	* All others: Adding C++-style switch statement to UCC.

2006-11-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Adding extra capabilities to UI_book_mode_ex intrinsic, as well as improved
	documentation for it.

2006-11-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Adding two new intrinsics: UI_book_mode_ex and UI_display_map_ex, as
	well as documentation for both.

2006-11-17  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* docs/exult_intrinsics.txt: Reformatting file, some other minor fixes.

2006-11-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ucinternal.cc: Fixed possible stack corruption on usecode machine when
	  getting/setting global flags. Also, for testing, make opcode 0x2d (setr)
	  display pending text.
	* exult.cc: Made --buildmap option work once again, now with support for
	  all games and mods.
	* usecode/compiler/ucfun.cc: Usecode functions which specify a return value
	  use the UC_RTS return instead of UC_RET at the end of the function.
	* usecode/compiler/*.*: Added support for comparison of multiple strings in
	  a converse case block. Syntax is:
			case "test1", "test2":
	  and adding the '(remove)' option causes all the options to be removed.
	  The UCC script command 'call' now accepts variables for the eventid to use.
	  Also added new scripting options with the intent to completelly phase out
	  the execute_usecode_array and delayed_execute_usecode_array intrinsics.
	  Scripts can now be created like this:
		var varname1 = new script { // script commands };
	  and can be added to like this:
		varname1 << varname2;
		varname1 << { // script commands };
	  The '<<' operator will append the right-hand side to the var on the left-
	  hand side, and can be chained; e.g.,